--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
         - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
         - ENV_FILEBEAT_VERSION
     hostname: irods
+    depends_on:
+      - irods-db
     ports:
       - "1247:1247"
       - "1248:1248"
@@ -136,6 +138,9 @@ services:
         - ENV_DOCKERIZE_VERSION
         - ENV_FILEBEAT_VERSION
     hostname: ires-s3-1
+    depends_on:
+      - minio1
+      - irods
     environment:
       RODS_PASSWORD: irods
       PGPASSWORD: foobar
@@ -168,6 +173,9 @@ services:
         - ENV_DOCKERIZE_VERSION
         - ENV_FILEBEAT_VERSION
     hostname: ires-s3-2
+    depends_on:
+      - minio2
+      - irods
     environment:
       RODS_PASSWORD: irods
       PGPASSWORD: foobar
