--- a/ires/Dockerfile
+++ b/ires/Dockerfile
@@ -25,6 +25,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     python-ldap \
     sudo \
     lsof \
+    fortune-mod \
     cifs-utils  \
     curl \
     nano \
