Add pacman depends_on keycloak. RITDEV-658

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - irods
       - db
       - crossref-lookup
+      - keycloak
     hostname: pacman
     volumes:
       - /etc/localtime:/etc/localtime:ro
