--- a/ires-s3/Dockerfile
+++ b/ires-s3/Dockerfile
@@ -43,7 +43,8 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     g++ \
     make \
     cmake \
-    git
+    git \
+    python-pip
     # }} end
 
 ENV IRODS_VERSION ${ENV_IRODS_VERSION}
@@ -60,7 +61,9 @@ RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key a
     # packages required for building microservices
     irods-externals-clang-runtime${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION} \
     irods-externals-clang${ENV_IRODS_EXT_CLANG_VERSION} \
-    irods-externals-libs3a30e55e8-0
+    irods-externals-libs3a30e55e8-0 \
+    # packages required for python rule engine
+    irods-rule-engine-plugin-python=${IRODS_VERSION}
 
 # install Metalnx RMD
 ADD ./emc-metalnx-rmd-1.0-1.deb /tmp/emc-metalnx-rmd-1.0-1.deb
@@ -85,6 +88,7 @@ ADD ./setup_responses /etc/irods/setup_responses
 ADD ./bootstrap.sh /opt/irods/bootstrap.sh
 ADD ./bootstrap_irods.sh /opt/irods/bootstrap_irods.sh
 ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
+ADD ./add_rule_engine.py /opt/irods/add_rule_engine.py
 ADD ./add_env_var.py /opt/irods/add_env_var.py
 RUN chmod a+x /opt/irods/*
 
