--- a/irods-icommands/Dockerfile
+++ b/irods-icommands/Dockerfile
@@ -8,15 +8,15 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     apt-transport-https \
     wget \
-    libfuse2 \
-    libcurl4-gnutls-dev
+    libxml2
 
 # install iRODS icommands
-RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
-    && echo "deb [arch=amd64] https://packages.irods.org/apt/ xenial main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
+RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - \
+    && echo "deb [arch=amd64] https://packages.irods.org/apt/ xenial main" | tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    irods-icommands=${ENV_IRODS_VERSION}
+    irods-icommands=${ENV_IRODS_VERSION} \
+    irods-runtime=${ENV_IRODS_VERSION}
 
 RUN useradd -ms /bin/bash irods
 WORKDIR /home/irods
