Mirthconnect needs irods-frontend for metadata validation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -295,6 +295,7 @@ services:
         - ENV_FILEBEAT_VERSION
     depends_on:
       - epicpid
+      - irods-frontend
     hostname: mirthconnect
     ports:
       - "8443:8443"
