--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - crossref-lookup
       - keycloak
     hostname: pacman
+    env_file:
+      - ./dataverse.secrets.cfg
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./externals/handsontable:/var/www/html/sites/all/modules/handsontable
@@ -49,6 +51,12 @@ services:
       DRUPAL_BASE_URL: http://pacman.{RIT_ENV}.rit.unimaas.nl
       SIMPLESAMLPHP_PASSWORD: password
       SIMPLESAMLPHP_SALT: 04ewyapckg6lj4wn7emchwu8kojtjaoh
+      DATAVERSE_ENDPOINT: https://act.dataverse.nl/
+      DATAVERSE_TREE_ROOT_ID: 679 # Maastricht University Dataverse's ID
+      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_USER: user
+      RABBITMQ_PASS: password
+      RABBITMQ_PORT: 5672
   keycloak:
     image: jboss/keycloak:6.0.1
     hostname: keycloak
