Added the options to enable and define a maintenance banner

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       DB_PASS: foobar
       PACMAN_ADMIN_NAME: rit-admin
       PACMAN_ADMIN_PASS: foobar
+      PACMAN_ENABLE_MAINTENANCE_BANNER: "true"
+      PACMAN_MAINTENANCE_BANNER_TEXT: "On Tuesday 10-10-2019 there will be maintenance on The ingest zones. It will not be available from 19:00 to max. 22:00"
       IRODS_FRONTEND_ENV_VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
       IRODS_WEBDAV_ENV_VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
       IRODS_HOST: irods
