--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 
 # iRODS and iRES
 ENV_IRODS_VERSION=4.2.5
+ENV_IRODS_MSI_CURL_VERSION=2.5.0
 ENV_IRODS_EXT_CLANG_VERSION=3.8-0
 ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
 ENV_IRODS_INGEST_REMOVE_DELAY=300s
