Set environment variable for proxy Change github protocol to https

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         - ENV_SIMPLESAML_VERSION
         - ENV_SIMPLESAML_HASH
         - ENV_FILEBEAT_VERSION
+        - ENV_HTTP_PROXY
     depends_on:
       - irods
       - db
