--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -9,7 +9,7 @@ cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/p
 cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
 cfg_EpicPassword = foobar
 cfg_EpicPrefix = 21.T12996
-cfg_EpicURL = http://epicpid/epic
+cfg_EpicURL = http://epicpid.dh.local/epic
 cfg_EpicUser = user
 cfg_EpicHandlerUrl = http://pacman.RIT_ENV.rit.unimaas.nl
 cfg_MirthConnectUser_UM = mdl-dev
