Change adress of mirthconnect to mirthconnect.dh.local

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ ENV_IRODS_EXT_CLANG_VERSION=3.8-0
 ENV_IRODS_EXT_CLANG_RUNTIME_VERSION=3.8-0
 ENV_IRODS_RESC_PLUGIN_S3_VERSION=2.6.2
 ENV_IRODS_INGEST_REMOVE_DELAY=300s
-ENV_MIRTH_VALIDATION_CHANNEL=mirthconnect:6669
-ENV_MIRTH_METADATA_CHANNEL=mirthconnect:6670
+ENV_MIRTH_VALIDATION_CHANNEL=mirthconnect.dh.local:6669
+ENV_MIRTH_METADATA_CHANNEL=mirthconnect.dh.local:6670
 
 # iRODS-frontend
 ENV_IRODS_REST_VERSION=4.1.10.0-RC1
