Change adress of irods-db to irods-db.dh.local [RITDEV-718]

--- a/mirthconnect/mirth.properties
+++ b/mirthconnect/mirth.properties
@@ -60,7 +60,7 @@ database = postgres
 # 	MySQL		jdbc:mysql://localhost:3306/mirthdb
 #	Oracle		jdbc:oracle:thin:@localhost:1521:DB
 #	SQLServer	jdbc:jtds:sqlserver://localhost:1433/mirthdb
-database.url = jdbc:postgresql://irods-db:5432/mirthdb
+database.url = jdbc:postgresql://irods-db.dh.local:5432/mirthdb
 
 # if using a custom driver, specify it here
 #database.driver =
