--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -4,7 +4,7 @@ cfg_iRodsUserMdl = service-mdl
 cfg_iRodsPasswordMdl = foobar
 cfg_iRodsUserPID = service-pid
 cfg_iRodsPasswordPID = foobar
-cfg_iRodsRestURL = http://irods-frontend/rest
+cfg_iRodsRestURL = http://irods-frontend.dh.local/rest
 cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
 cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
 cfg_EpicPassword = foobar
