--- a/ires/filebeat.yml
+++ b/ires/filebeat.yml
@@ -20,4 +20,4 @@ filebeat.prospectors:
   tags: ["IRES_UM01", "IRES"]
 
 output.logstash:
-    hosts: ["elk:5044"]
+    hosts: ["elk.dh.local:5044"]
