Change adress of irods to irods.dh.local [RITDEV-718]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       PACMAN_MAINTENANCE_BANNER_TEXT: "On Tuesday 10-10-2019 there will be maintenance on The ingest zones. It will not be available from 19:00 to max. 22:00"
       IRODS_FRONTEND_ENV_VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
       IRODS_WEBDAV_ENV_VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
-      IRODS_HOST: irods
+      IRODS_HOST: irods.dh.local
       IRODS_ENV_RODS_PASSWORD: irods
       CROSSREF_LOOKUP_HOST: crossref-lookup.dh.local
       VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
@@ -349,7 +349,7 @@ services:
       - irods
     hostname: metalnx
     environment:
-      IRODS_HOST: irods
+      IRODS_HOST: irods.dh.local
       IRODS_PORT: 1247
       IRODS_ZONE: nlmumc
       IRODS_USER: rods
